commit old data now try to do server action infinite scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,8 @@
     border-radius: 2px;
   }
 }
+
+.black-and-white-toast {
+  color: black; /* Setting text color to black */
+  background-color: white; /* Setting background color to white */
+}
